# src/main/java/org/acme/GreetingResource.java
@@ -1,46 +1,41 @@
 package org.acme;
 
-import jakarta.ws.rs.*;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.Path;
 import jakarta.ws.rs.core.MediaType;
-import org.acme.types.first.FirstExampleType;
-import org.acme.types.second.SecondExampleType;
-import org.acme.types.third.ThirdExampleType;
+import org.acme.types.UseNativeTypeType;
+import org.acme.types.UseSchemaImplementationType;
+import org.acme.types.UseSchemaRefType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-@Path("/hello")
+@Path("/schema")
 public class GreetingResource {
 
     private final Logger logger = LoggerFactory.getLogger(getClass());
 
 
-    @GET
-    @Produces(MediaType.TEXT_PLAIN)
-    public String hello() {
-        return "Hello from Quarkus REST";
+    @POST
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Path("/UseSchemaImplementationType")
+    public void first(final UseSchemaImplementationType type) {
+        logger.info(type.toString());
     }
 
 
     @POST
     @Consumes(MediaType.APPLICATION_JSON)
-    @Path("/first")
-    public void first(final FirstExampleType firstExampleType) {
-        logger.info(firstExampleType.toString());
+    @Path("/UseSchemaRefType")
+    public void second(final UseSchemaRefType type) {
+        logger.info(type.toString());
     }
 
 
     @POST
     @Consumes(MediaType.APPLICATION_JSON)
-    @Path("/second")
-    public void second(final SecondExampleType secondExampleType) {
-        logger.info(secondExampleType.toString());
-    }
-
-
-    @POST
-    @Consumes(MediaType.APPLICATION_JSON)
-    @Path("/third")
-    public void third(final ThirdExampleType thirdExampleType) {
-        logger.info(thirdExampleType.toString());
+    @Path("/UseNativeTypeType")
+    public void third(final UseNativeTypeType type) {
+        logger.info(type.toString());
     }
 }
