# src/main/java/org/acme/types/UseNativeTypeType.java
@@ -1,4 +1,4 @@
-package org.acme.types.third;
+package org.acme.types;
 
 
 import org.eclipse.microprofile.openapi.annotations.enums.SchemaType;
@@ -6,9 +6,13 @@ import org.eclipse.microprofile.openapi.annotations.media.Schema;
 
 import java.util.Date;
 
-// Hint: Works only with `type = SchemaType.STRING`, which was not the case with older Quarkus versions (at least with 3.8.6 and 3.15.4)
+/**
+ * Hint: Works only with `type = SchemaType.STRING`, which was not the case with older Quarkus versions (at least with 3.8.6 and 3.15.4)
+ * Without this, it uses schema type `OBJECT`
+ */
+
 @Schema(implementation = Date.class, type = SchemaType.STRING)
-public class ThirdExampleType {
+public class UseNativeTypeType {
 
     private final Date value;
 
@@ -16,12 +20,12 @@ public class ThirdExampleType {
     private final Boolean composite = true;
 
 
-    public ThirdExampleType() {
+    public UseNativeTypeType() {
         this.value = new Date();
     }
 
 
-    public ThirdExampleType(final Date value) {
+    public UseNativeTypeType(final Date value) {
         this.value = value;
     }
 
@@ -48,8 +52,10 @@ public class ThirdExampleType {
 
     @Override
     public String toString() {
-        return "ThirdExampleType{" +
+        return "UseNativeTypeType{" +
                 "value=" + value +
+                ", internalValue='" + internalValue + '\'' +
+                ", composite=" + composite +
                 '}';
     }
 }
